[gd_scene load_steps=17 format=3 uid="uid://cccvsiorwsaq2"]

[ext_resource type="Script" path="res://UI/menus/start_menu.gd" id="1_vbgxm"]
[ext_resource type="VideoStream" path="res://ArtAssets/UI/Start Menu/SSG_Opening.ogv" id="2_w37rr"]
[ext_resource type="VideoStream" path="res://ArtAssets/UI/Start Menu/SSG_Opening_loop.ogv" id="3_yihf2"]
[ext_resource type="Texture2D" uid="uid://c367dkplpipy4" path="res://ArtAssets/UI/Start Menu/start_button.png" id="4_i7frp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0f1xo"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_156pr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nxu8u"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nww81"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7r4fk"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5s2o8"]

[sub_resource type="Animation" id="Animation_0iswe"]
resource_name = "fade_to_black"
length = 0.25
step = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.001, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.001),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_if6no"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_x78uh"]
_data = {
"RESET": SubResource("Animation_if6no"),
"fade_to_black": SubResource("Animation_0iswe")
}

[sub_resource type="Animation" id="Animation_26r0k"]
resource_name = "button_enter"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("StartButton:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1154, 529), Vector2(843, 529)]
}

[sub_resource type="Animation" id="Animation_1i6p5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("StartButton:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1154, 529)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_e2wg2"]
_data = {
"RESET": SubResource("Animation_1i6p5"),
"button_enter": SubResource("Animation_26r0k")
}

[node name="StartMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vbgxm")

[node name="LoopVid" type="VideoStreamPlayer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stream = ExtResource("3_yihf2")
expand = true
loop = true

[node name="OpeningVid" type="VideoStreamPlayer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stream = ExtResource("2_w37rr")
autoplay = true
expand = true

[node name="StartButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 578.0
offset_top = 205.0
offset_right = 928.0
offset_bottom = 313.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.75, 0.75)
theme_override_colors/icon_pressed_color = Color(0.945098, 0.34902, 0.439216, 1)
theme_override_colors/icon_hover_color = Color(0.972549, 0.690196, 0.733333, 1)
theme_override_styles/focus = SubResource("StyleBoxEmpty_0f1xo")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_156pr")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_nxu8u")
theme_override_styles/hover = SubResource("StyleBoxEmpty_nww81")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_7r4fk")
theme_override_styles/normal = SubResource("StyleBoxEmpty_5s2o8")
icon = ExtResource("4_i7frp")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0)

[node name="FadeAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_x78uh")
}

[node name="ButtonAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_e2wg2")
}
